# uptime-monitor

./: CLAUDE.md  README.md  compose.yaml
.claude/: settings.local.json
api/: .dockerignore  Dockerfile  main.py  pyproject.toml
api/test/: test_health.py
nuon/uptime-monitor/: DOCS.md  README.md  break_glass.toml  inputs.toml  metadata.toml  runner.toml  sandbox.tfvars  sandbox.toml  stack.toml
nuon/uptime-monitor/actions/: README.md  flush_healthchecks.toml  headlamp_token.toml  rds_creds.toml  ts_operator_credentials.toml
nuon/uptime-monitor/components/: 0-api-image.toml  0-image-tailscale-operator.toml  0-ui-image.toml  1-certificate.toml  1-irsa.toml  1-rds.toml  1-s3.toml  2-api.toml  2-ui.toml  3-headlamp-ingress.toml  3-headlamp-rbac.toml  3-headlamp.toml  3-tailscale-operator.toml  3-tailscale-proxy.toml  4-alb.toml  4-headlamp-ingress.toml  README.md
nuon/uptime-monitor/components/1-certificate/: main.tf
nuon/uptime-monitor/components/1-irsa/: main.tf
nuon/uptime-monitor/components/1-rds/: main.tf
nuon/uptime-monitor/components/1-s3/: main.tf
nuon/uptime-monitor/components/2-api/: manifest.yaml
nuon/uptime-monitor/components/2-ui/: manifest.yaml
nuon/uptime-monitor/components/3-headlamp-ingress/: manifest.yaml
nuon/uptime-monitor/components/3-headlamp-rbac/: manifest.yaml
nuon/uptime-monitor/components/3-tailscale-operator/: manifest.yaml
nuon/uptime-monitor/permissions/: README.md  deprovision.toml  maintenance.toml  maintenance_boundary.json  provision.toml
ui/: Dockerfile  index.html  nginx.conf
ui/src/: admin.html  index.html
(+4 files in other folders)
