[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.35.0",
    "fastapi[standard]>=0.121.0",
    "httpx>=0.28.1",
    "playwright>=1.56.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["test"]
